--- a/index.html
+++ b/index.html
@@ -533,93 +533,93 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-1.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-1.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-1.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-2.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-2.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-2.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-3.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-3.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-3.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-4.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-4.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-4.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-5.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-5.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-5.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-6.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-6.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-6.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-7.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-7.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-7.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-8.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-8.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-8.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-9.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-9.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-9.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-9.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-10.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-10.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-10.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-10.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-11.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-11.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-11.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-11.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-12.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-12.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gallery-12.JPG" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/gallery/gallery-12.JPG" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
