--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div class="ms-3"> <!-- Added margin-start to provide space between the icon and text -->
                   <h3>Location</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Tejaji Nagar Square, Near Jahabai's Farm, Nayapura, Indore 452020 (M.P.)</p>
                 </div>
               </div>
   
