--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="swiper-slide">
           <div class="row gy-4 event-item">
             <div class="col-lg-6">
-              <img src="assets/img/events-slider/weddings.jpg" class="img-fluid" alt="Weddings">
+              <img src="assets/img/events-slider/weddings.jpg" class="img-fluid about-img" alt="Weddings">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
               <h3>Weddings and Celebrations</h3>
@@ -309,7 +309,7 @@
         <div class="swiper-slide">
           <div class="row gy-4 event-item">
             <div class="col-lg-6">
-              <img src="assets/img/events-slider/corporate.jpg" class="img-fluid" alt="Corporate Events">
+              <img src="assets/img/events-slider/corporate.jpg" class="img-fluid about-img" alt="Corporate Events">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
               <h3>Corporate Events</h3>
@@ -332,7 +332,7 @@
         <div class="swiper-slide">
           <div class="row gy-4 event-item">
             <div class="col-lg-6">
-              <img src="assets/img/events-slider/family.jpg" class="img-fluid" alt="Family Gatherings">
+              <img src="assets/img/events-slider/family.jpg" class="img-fluid about-img" alt="Family Gatherings">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
               <h3>Family Gatherings</h3>
@@ -355,7 +355,7 @@
         <div class="swiper-slide">
           <div class="row gy-4 event-item">
             <div class="col-lg-6">
-              <img src="assets/img/events-slider/cultural.jpg" class="img-fluid" alt="Cultural Programs">
+              <img src="assets/img/events-slider/cultural.jpg" class="img-fluid about-img" alt="Cultural Programs">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
               <h3>Cultural Programs</h3>
@@ -380,7 +380,7 @@
         <div class="swiper-slide">
           <div class="row gy-4 event-item">
             <div class="col-lg-6">
-              <img src="assets/img/events-slider/custom.jpg" class="img-fluid" alt="Custom Events">
+              <img src="assets/img/events-slider/custom.jpg" class="img-fluid about-img" alt="Custom Events">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
               <h3>Custom Events</h3>
@@ -535,7 +535,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-1.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-1.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-1.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -543,7 +543,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-2.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-2.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-2.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -551,7 +551,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-3.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-3.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-3.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -559,7 +559,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-4.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-4.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-4.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -567,7 +567,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-5.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-5.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-5.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -575,7 +575,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-6.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-6.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-6.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -583,7 +583,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-7.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-7.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-7.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -591,7 +591,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-8.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-8.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-8.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -599,28 +599,28 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-9.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-9.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-9.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-10.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-10.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-10.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-11.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-11.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-11.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-12.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-12.JPG" alt="" class="img-fluid">
+                <img src="assets/img/gallery/gallery-12.JPG" alt="" class="img-fluid about-img">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -645,7 +645,7 @@
 
       <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
         <div class="member text-center"> <!-- Added text-center to center the image and content -->
-          <img src="assets/img/staff/staff.jpg" class="img-fluid" alt="Team Member">
+          <img src="assets/img/staff/staff.jpg" class="img-fluid about-img" alt="Team Member">
         </div>
       </div><!-- End Team Member -->
 
