--- a/index.html
+++ b/index.html
@@ -674,14 +674,14 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4 justify-content-center"> <!-- Centers the row content -->
           <div class="col-lg-12">
-            <div class="d-flex justify-content-between align-items-center flex-wrap"> <!-- Ensures flex layout, items spaced equally, and wrapped on smaller screens -->
+            <div class="d-flex justify-content-between align-items-center flex-wrap "> 
   
               <!-- Location Info -->
               <div class="info-item d-flex align-items-center" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
-                <div class="ms-3"> <!-- Added margin-start to provide space between the icon and text -->
+                <div class="ms-3"> 
                   <h3>Location</h3>
-                  <p>Tejaji Nagar Square, Near Jahabai's Farm, Nayapura, Indore 452020 (M.P.)</p>
+                  <p>Tejaji Nagar Square, Near Jahabai's Farm<br> Nayapura, Indore 452020 (M.P.)</p>
                 </div>
               </div>
   
