--- a/index.html
+++ b/index.html
@@ -26,17 +26,26 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-
-  <!-- =======================================================
-  * Template Name: 
-श्री Anandam
-  * Template URL: https://bootstrapmade.com/
-श्री Anandam-restaurant-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <style>
+    #google_translate_element {
+      background-color: #333;
+      padding: 5px;
+      border-radius: 5px;
+      display: inline-block;
+    }
+    .goog-te-gadget {
+      color: black !important;
+      font-size: 8px;
+    }
+    .goog-te-gadget select {
+      background: #444;
+      color: rgb(239, 141, 12);
+      border: none;
+      padding: 0px;
+      border-radius: 3px;
+    }
+  </style>
 </head>
 
 <body class="index-page">
@@ -49,12 +58,7 @@
           <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:xyz@ananadam.com">xyz@ananadam.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 7587955500</span></i>
         </div>
-        <div class="languages d-none d-md-flex align-items-center">
-          <ul>
-            <li>English</li>
-            <li><a href="#">हिंदी</a></li>
-          </ul>
-        </div>
+        <div id="google_translate_element"></div>
       </div>
     </div><!-- End Top Bar -->
 
@@ -764,6 +768,15 @@
 
   <!-- Preloader -->
   <div id="preloader"></div>
+    <script>
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'hi,en',
+        layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL
+      }, 'google_translate_element');
+    }
+  </script>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
